test/functions/whereClauses/whereClauseNoFn3.good
whereClauseNoFn3.chpl:1: In function 'foo':
whereClauseNoFn3.chpl:1: error: unresolved call 'bar()'
