test/functions/whereClauses/whereClauseNoFn3.chpl
proc foo(x: int) where bar() {
  writeln("In foo");
}

foo(1);
